--- a/AudioBitesCatBre.html
+++ b/AudioBitesCatBre.html
@@ -217,19 +217,29 @@
 				</a>
             </div>
             <div class="recipe-card">
-                <img src="Images/tacocakes.jpg" alt="Taco Pancakes" class="recipe-image">
+                <a href="AudioBitesRecipe7.html">
+                <img src="Images/egg-hash.jpeg" alt="Egg and Hash" class="recipe-image">
+				</a>
             </div>
             <div class="recipe-card">
-                <img src="Images/pancakes.jpg" alt="Pancakes" class="recipe-image">
+                <a href="AudioBitesRecipe6.html">
+                <img src="Images/english-breakfast.jpg" alt="English Breakfast Plate" class="recipe-image">
+				</a>
             </div>
             <div class="recipe-card">
-                <img src="Images/breky.jpg" alt="Classic Breakfast" class="recipe-image">
+                <a href="AudioBitesRecipe5.html">
+                <img src="Images/pancakes.jpg" alt="Fluffy Pancakes Stack" class="recipe-image">
+				</a>
             </div>
             <div class="recipe-card">
-                <img src="Images/egg.jpeg" alt="Eggs and Hash" class="recipe-image">
+                <a href="AudioBitesRecipe4.html">
+                <img src="Images/tacocakes.jpg" alt="TacoCakes" class="recipe-image">
+				</a>
             </div>
             <div class="recipe-card">
+                <a href="AudioBitesRecipe3.html">
                 <img src="Images/BlueBerry.jpg" alt="Blue Berry Muffins" class="recipe-image">
+				</a>
             </div>
         </div>
 
@@ -238,20 +248,26 @@
         <div class="recipe-grid">
             <!-- Trending Recipe Cards -->
 			<div class="recipe-card">
-            <a href="AudioBitesRecipe2.html">
-                <img src="Images/AvoToast.jpg" alt="Avocado Toast" class="recipe-image">
+            <a href="AudioBitesRecipe7.html">
+                <img src="Images/egg-hash.jpeg" alt="Egg and Hash" class="recipe-image">
 				</a>
 				</div>
             <div class="recipe-card">
-                <img src="Images/breky.jpg" alt="Classic Breakfast" class="recipe-image">
+                <a href="AudioBitesRecipe6.html">
+                <img src="Images/english-breakfast.jpg" alt="English Breakfast Plate" class="recipe-image">
+				</a>
             </div>
             <div class="recipe-card">
                 <div class="recipe-card">
-                <img src="Images/pancakes.jpg" alt="Pancakes" class="recipe-image">
+                <a href="AudioBitesRecipe2.html">
+                <img src="Images/AvoToast.jpg" alt="Avocado Toast" class="recipe-image">
+				</a>
             </div>
             </div>
             <div class="recipe-card">
+                <a href="AudioBitesRecipe3.html">
                 <img src="Images/BlueBerry.jpg" alt="Blue Berry Muffins" class="recipe-image">
+				</a>
             </div>
         </div>
     </main>
