--- a/AudioBitesCatCul.html
+++ b/AudioBitesCatCul.html
@@ -207,29 +207,39 @@
 
     <main class="container">
         <div class="page-header">
-            <h1 class="page-title">Breakfast Recipes</h1>
+            <h1 class="page-title">Cultural Recipes</h1>
         </div>
 
         <div class="recipe-grid">
             <div class="recipe-card">
-				<a href="AudioBitesRecipe2.html">
-                <img src="Images/AvoToast.jpg" alt="Avocado Toast" class="recipe-image">
+				<a href="AudioBitesRecipe53.html">
+                <img src="Images/lobster_roll.jpg" alt="Lobster Roll" class="recipe-image" />
 				</a>
             </div>
             <div class="recipe-card">
-                <img src="Images/tacocakes.jpg" alt="Taco Pancakes" class="recipe-image">
+                <a href="AudioBitesRecipe52.html">
+                <img src="Images/risotto.jpg" alt="Italian Risotto" class="recipe-image" />
+				</a>
             </div>
             <div class="recipe-card">
-                <img src="Images/pancakes.jpg" alt="Pancakes" class="recipe-image">
+                <a href="AudioBitesRecipe51.html">
+                <img src="Images/meat-pie.jpeg" alt="Australian Meat Pie" class="recipe-image" />
+				</a>
             </div>
             <div class="recipe-card">
-                <img src="Images/breky.jpg" alt="Classic Breakfast" class="recipe-image">
+                <a href="AudioBitesRecipe50.html">
+                <img src="Images/lamb-tagine.jpg" alt="Moroccan Lamb Tagine" class="recipe-image" />
+				</a>
             </div>
             <div class="recipe-card">
-                <img src="Images/egg.jpeg" alt="Eggs and Hash" class="recipe-image">
+                <a href="AudioBitesRecipe49.html">
+                <img src="Images/feijoada.jpg" alt="Brazilian Feijoada" class="recipe-image" />
+				</a>
             </div>
             <div class="recipe-card">
-                <img src="Images/BlueBerry.jpg" alt="Blue Berry Muffins" class="recipe-image">
+                <a href="AudioBitesRecipe48.html">
+                <img src="Images/kimchi-jjigae.jpg" alt="Korean Kimchi Jjigae" class="recipe-image" />
+				</a>
             </div>
         </div>
 
@@ -238,20 +248,26 @@
         <div class="recipe-grid">
             <!-- Trending Recipe Cards -->
 			<div class="recipe-card">
-            <a href="AudioBitesRecipe2.html">
-                <img src="Images/AvoToast.jpg" alt="Avocado Toast" class="recipe-image">
+            <a href="AudioBitesRecipe53.html">
+                <img src="Images/lobster_roll.jpg" alt="Lobster Roll" class="recipe-image" />
 				</a>
 				</div>
             <div class="recipe-card">
-                <img src="Images/breky.jpg" alt="Classic Breakfast" class="recipe-image">
+                <a href="AudioBitesRecipe51.html">
+                <img src="Images/meat-pie.jpeg" alt="Australian Meat Pie" class="recipe-image" />
+				</a>
             </div>
             <div class="recipe-card">
                 <div class="recipe-card">
-                <img src="Images/pancakes.jpg" alt="Pancakes" class="recipe-image">
+                <a href="AudioBitesRecipe50.html">
+                <img src="Images/lamb-tagine.jpg" alt="Moroccan Lamb Tagine" class="recipe-image" />
+				</a>
             </div>
             </div>
             <div class="recipe-card">
-                <img src="Images/BlueBerry.jpg" alt="Blue Berry Muffins" class="recipe-image">
+                <a href="AudioBitesRecipe48.html">
+                <img src="Images/lobster_roll.jpg" alt="Lobster Roll" class="recipe-image" />
+				</a>
             </div>
         </div>
     </main>
