--- a/AudioBitesCatDer.html
+++ b/AudioBitesCatDer.html
@@ -212,24 +212,34 @@
 
         <div class="recipe-grid">
             <div class="recipe-card">
-				<a href="AudioBitesRecipe2.html">
-                <img src="Images/AvoToast.jpg" alt="Avocado Toast" class="recipe-image">
+				<a href="AudioBitesRecipe23.html">
+                <img src="Images/strawberry-cheesecake.jpeg" alt="Strawberry cheesecake topped with glaze and fresh berries" class="recipe-image" />
 				</a>
             </div>
             <div class="recipe-card">
-                <img src="Images/tacocakes.jpg" alt="Taco Pancakes" class="recipe-image">
+                <a href="AudioBitesRecipe22.html">
+                <img src="Images/cake-pops.jpg" alt="Decorated cake pops on sticks" class="recipe-image" />
+				</a>
             </div>
             <div class="recipe-card">
-                <img src="Images/pancakes.jpg" alt="Pancakes" class="recipe-image">
+                <a href="AudioBitesRecipe21.html">
+                <img src="Images/fudge-pie.jpg" alt="Rich fudge pie with whipped cream" class="recipe-image">
+				</a>
             </div>
             <div class="recipe-card">
-                <img src="Images/breky.jpg" alt="Classic Breakfast" class="recipe-image">
+                <a href="AudioBitesRecipe20.html">
+                <img src="Images/chocolate-pancakes.jpg" alt="Stack of chocolate pancakes with syrup" class="recipe-image">
+				</a>
             </div>
             <div class="recipe-card">
-                <img src="Images/egg.jpeg" alt="Eggs and Hash" class="recipe-image">
+                <a href="AudioBitesRecipe19.html">
+                <img src="Images/macaroons.jpg" alt="Colorful Macaroons" class="recipe-image">
+				</a>
             </div>
             <div class="recipe-card">
+                <a href="AudioBitesRecipe3.html">
                 <img src="Images/BlueBerry.jpg" alt="Blue Berry Muffins" class="recipe-image">
+				</a>
             </div>
         </div>
 
@@ -238,20 +248,26 @@
         <div class="recipe-grid">
             <!-- Trending Recipe Cards -->
 			<div class="recipe-card">
-            <a href="AudioBitesRecipe2.html">
-                <img src="Images/AvoToast.jpg" alt="Avocado Toast" class="recipe-image">
+            <a href="AudioBitesRecipe22.html">
+                <img src="Images/cake-pops.jpg" alt="Decorated cake pops on sticks" class="recipe-image" />
 				</a>
 				</div>
             <div class="recipe-card">
-                <img src="Images/breky.jpg" alt="Classic Breakfast" class="recipe-image">
+                <a href="AudioBitesRecipe21.html">
+                <img src="Images/fudge-pie.jpg" alt="Rich fudge pie with whipped cream" class="recipe-image">
+				</a>
             </div>
             <div class="recipe-card">
                 <div class="recipe-card">
-                <img src="Images/pancakes.jpg" alt="Pancakes" class="recipe-image">
+                <a href="AudioBitesRecipe19.html">
+                <img src="Images/macaroons.jpg" alt="Colorful Macaroons" class="recipe-image">
+				</a>
             </div>
             </div>
             <div class="recipe-card">
+                <a href="AudioBitesRecipe3.html">
                 <img src="Images/BlueBerry.jpg" alt="Blue Berry Muffins" class="recipe-image">
+				</a>
             </div>
         </div>
     </main>
