--- a/AudioBitesCatDin.html
+++ b/AudioBitesCatDin.html
@@ -218,19 +218,29 @@
 				</a>
             </div>
             <div class="recipe-card">
-                <img src="Images/pork.jpg" alt="Pork Chops" class="recipe-image">
+                <a href="AudioBitesRecipe14.html">
+                <img src="Images/potatoes-porkchops.jpg" alt="Potatoes and Porkchops" class="recipe-image">
+				</a>
             </div>
             <div class="recipe-card">
-                <img src="Images/HummusPasta.jpg" alt="Hummus Pasta" class="recipe-image">
+                <a href="AudioBitesRecipe15.html">
+                <img src="Images/hummus-pasta.jpg" alt="Hummus Pasta" class="recipe-image">
+				</a>
             </div>
             <div class="recipe-card">
-                <img src="Images/steak.jpg" alt="Steak and Mash" class="recipe-image">
+                <a href="AudioBitesRecipe16.html">
+                <img src="Images/steak-potatoes-greens.jpg" alt="Steak and Potatoes with Greens" class="recipe-image">
+				</a>
             </div>
             <div class="recipe-card">
-                <img src="Images/roastChicken.jpg" alt="Roasted Chicken" class="recipe-image">
+                <a href="AudioBitesRecipe17.html">
+                <img src="Images/chicken-peas-potatoes.jpg" alt="Chicken with peas and potatoes" class="recipe-image">
+				</a>
             </div>
             <div class="recipe-card">
-                <img src="Images/ribs.jpg" alt="Ribs" class="recipe-image">
+                <a href="AudioBitesRecipe18.html">
+                 <img src="Images/ribs.jpg" alt="Delicious Ribs" class="recipe-image">
+				</a>
             </div>
         </div>
 
@@ -239,18 +249,26 @@
         <div class="recipe-grid">
             <!-- Trending Recipe Cards -->
             <div class="recipe-card">
-                <img src="Images/roastChicken.jpg" alt="Roasted Chicken" class="recipe-image">
+                <a href="AudioBitesRecipe14.html">
+                <img src="Images/potatoes-porkchops.jpg" alt="Potatoes and Porkchops" class="recipe-image">
+				</a>
+				
             </div>
             <div class="recipe-card">
                 <a href="AudioBitesRecipe.html">
                 <img src="Images/PastaCarbon.jpg" alt="Pasta Carbonara" class="recipe-image">
 				</a>
+				
             </div>
             <div class="recipe-card">
-                <img src="Images/steak.jpg" alt="Steak and Mash" class="recipe-image">
+                <a href="AudioBitesRecipe15.html">
+                <img src="Images/hummus-pasta.jpg" alt="Hummus Pasta" class="recipe-image">
+				</a>
             </div>
             <div class="recipe-card">
-                <img src="Images/PastaCarbon.jpg" alt="Pork Chops" class="recipe-image">
+                <a href="AudioBitesRecipe18.html">
+                 <img src="Images/ribs.jpg" alt="Delicious Ribs" class="recipe-image">
+				</a>
             </div>
         </div>
     </main>
