--- a/AudioBitesCatFam.html
+++ b/AudioBitesCatFam.html
@@ -207,29 +207,39 @@
 
     <main class="container">
         <div class="page-header">
-            <h1 class="page-title">Breakfast Recipes</h1>
+            <h1 class="page-title">Famous Recipes</h1>
         </div>
 
         <div class="recipe-grid">
             <div class="recipe-card">
-				<a href="AudioBitesRecipe2.html">
-                <img src="Images/AvoToast.jpg" alt="Avocado Toast" class="recipe-image">
+				<a href="AudioBitesRecipe47.html">
+                <img src="Images/beef-bourguignon.jpg" alt="Beef Bourguignon" class="recipe-image" />
 				</a>
             </div>
             <div class="recipe-card">
-                <img src="Images/tacocakes.jpg" alt="Taco Pancakes" class="recipe-image">
+                <a href="AudioBitesRecipe46.html">
+                <img src="Images/chicken-piccata.jpg" alt="Chicken Piccata" class="recipe-image" />
+				</a>
             </div>
             <div class="recipe-card">
-                <img src="Images/pancakes.jpg" alt="Pancakes" class="recipe-image">
+                <a href="AudioBitesRecipe45.html">
+                <img src="Images/shrimp-scampi.jpg" alt="Shrimp Scampi" class="recipe-image" />
+				</a>
             </div>
             <div class="recipe-card">
-                <img src="Images/breky.jpg" alt="Classic Breakfast" class="recipe-image">
+                <a href="AudioBitesRecipe44.html">
+                <img src="Images/roast-chicken.jpg" alt="Roast Chicken" class="recipe-image" />
+				</a>
             </div>
             <div class="recipe-card">
-                <img src="Images/egg.jpeg" alt="Eggs and Hash" class="recipe-image">
+                <a href="AudioBitesRecipe43.html">
+                <img src="Images/chicken-in-a-pot.jpg" alt="Chicken in a Pot" class="recipe-image" />
+				</a>
             </div>
             <div class="recipe-card">
-                <img src="Images/BlueBerry.jpg" alt="Blue Berry Muffins" class="recipe-image">
+                <a href="AudioBitesRecipe42.html">
+                <img src="Images/beef-wellington.jpg" alt="Beef Wellington" class="recipe-image" />
+				</a>
             </div>
         </div>
 
@@ -238,20 +248,26 @@
         <div class="recipe-grid">
             <!-- Trending Recipe Cards -->
 			<div class="recipe-card">
-            <a href="AudioBitesRecipe2.html">
-                <img src="Images/AvoToast.jpg" alt="Avocado Toast" class="recipe-image">
+            <a href="AudioBitesRecipe42.html">
+                <img src="Images/beef-wellington.jpg" alt="Beef Wellington" class="recipe-image" />
 				</a>
 				</div>
             <div class="recipe-card">
-                <img src="Images/breky.jpg" alt="Classic Breakfast" class="recipe-image">
+                <a href="AudioBitesRecipe43.html">
+                <img src="Images/chicken-in-a-pot.jpg" alt="Chicken in a Pot" class="recipe-image" />
+				</a>
             </div>
             <div class="recipe-card">
                 <div class="recipe-card">
-                <img src="Images/pancakes.jpg" alt="Pancakes" class="recipe-image">
+                <a href="AudioBitesRecipe45.html">
+                <img src="Images/shrimp-scampi.jpg" alt="Shrimp Scampi" class="recipe-image" />
+				</a>
             </div>
             </div>
             <div class="recipe-card">
-                <img src="Images/BlueBerry.jpg" alt="Blue Berry Muffins" class="recipe-image">
+                <a href="AudioBitesRecipe47.html">
+                <img src="Images/beef-bourguignon.jpg" alt="Beef Bourguignon" class="recipe-image" />
+				</a>
             </div>
         </div>
     </main>
