--- a/AudioBitesCatHol.html
+++ b/AudioBitesCatHol.html
@@ -212,24 +212,34 @@
 
         <div class="recipe-grid">
             <div class="recipe-card">
-				<a href="AudioBitesRecipe2.html">
-                <img src="Images/AvoToast.jpg" alt="Avocado Toast" class="recipe-image">
+				<a href="AudioBitesRecipe29.html">
+                <img src="Images/roastturkey.jpg" alt="Roast turkey on a platter" class="recipe-image" />
 				</a>
             </div>
             <div class="recipe-card">
-                <img src="Images/tacocakes.jpg" alt="Taco Pancakes" class="recipe-image">
+                <a href="AudioBitesRecipe28.html">
+                <img src="Images/peppermintbark.jpg" alt="Pieces of peppermint bark" class="recipe-image" />
+				</a>
             </div>
             <div class="recipe-card">
-                <img src="Images/pancakes.jpg" alt="Pancakes" class="recipe-image">
+                <a href="AudioBitesRecipe27.html">
+                <img src="Images/butternutsoup.jpg" alt="Bowl of creamy butternut squash soup" class="recipe-image" />
+				</a>
             </div>
             <div class="recipe-card">
-                <img src="Images/breky.jpg" alt="Classic Breakfast" class="recipe-image">
+                <a href="AudioBitesRecipe26.html">
+                <img src="Images/holidayham.jpg" alt="Holiday ham with cranberry orange glaze" class="recipe-image" />
+				</a>
             </div>
             <div class="recipe-card">
-                <img src="Images/egg.jpeg" alt="Eggs and Hash" class="recipe-image">
+                <a href="AudioBitesRecipe25.html">
+                <img src="Images/latkes.jpg" alt="Crispy golden latkes" class="recipe-image" />
+				</a>
             </div>
             <div class="recipe-card">
-                <img src="Images/BlueBerry.jpg" alt="Blue Berry Muffins" class="recipe-image">
+                <a href="AudioBitesRecipe24.html">
+                <img src="Images/gingerbread-cookies.jpg" alt="Decorated gingerbread cookies" class="recipe-image" />
+				</a>
             </div>
         </div>
 
@@ -238,20 +248,26 @@
         <div class="recipe-grid">
             <!-- Trending Recipe Cards -->
 			<div class="recipe-card">
-            <a href="AudioBitesRecipe2.html">
-                <img src="Images/AvoToast.jpg" alt="Avocado Toast" class="recipe-image">
+            <a href="AudioBitesRecipe25.html">
+                <img src="Images/latkes.jpg" alt="Crispy golden latkes" class="recipe-image" />
 				</a>
 				</div>
             <div class="recipe-card">
-                <img src="Images/breky.jpg" alt="Classic Breakfast" class="recipe-image">
+                <a href="AudioBitesRecipe29.html">
+                <img src="Images/roastturkey.jpg" alt="Roast turkey on a platter" class="recipe-image" />
+				</a>
             </div>
             <div class="recipe-card">
                 <div class="recipe-card">
-                <img src="Images/pancakes.jpg" alt="Pancakes" class="recipe-image">
+                <a href="AudioBitesRecipe27.html">
+                <img src="Images/butternutsoup.jpg" alt="Bowl of creamy butternut squash soup" class="recipe-image" />
+				</a>
             </div>
             </div>
             <div class="recipe-card">
-                <img src="Images/BlueBerry.jpg" alt="Blue Berry Muffins" class="recipe-image">
+                <a href="AudioBitesRecipe26.html">
+                <img src="Images/holidayham.jpg" alt="Holiday ham with cranberry orange glaze" class="recipe-image" />
+				</a>
             </div>
         </div>
     </main>
