--- a/AudioBitesCatLun.html
+++ b/AudioBitesCatLun.html
@@ -218,21 +218,31 @@
 				</a>
             </div>
             <div class="recipe-card">
-                <img src="Images/Fake.jpg" alt="Chicken Wings" class="recipe-image">
+                <a href="AudioBitesRecipe8.html">
+                <img src="Images/fried-chicken-salad.jpg" alt="Fried Chicken and Fresh Salad" class="recipe-image">
+				</a>
             </div>
             <div class="recipe-card">
-                <img src="Images/VegBur.jpeg" alt="Veggie Burrito" class="recipe-image">
+                <a href="AudioBitesRecipe12.html">
+                <img src="Images/jalapeno-wonton-poppers.jpg" alt="Jalapeño Wonton Poppers" class="recipe-image">
+				</a>
             </div>
             <div class="recipe-card">
-                <img src="Images/EggSal.jpg" alt="Egg on Salad" class="recipe-image">
+                <a href="AudioBitesRecipe11.html">
+                <img src="Images/rainbow-vegan-bowl.jpg" alt="Rainbow Vegan Bowl" class="recipe-image">
+				</a>
             </div>
             <div class="recipe-card">
 			
-                <img src="Images/Tofa.jpg" alt="Tofu Salad" class="recipe-image">
+                <a href="AudioBitesRecipe10.html">
+               <img src="Images/egg-chicken-salad.jpg" alt="Egg Chicken Salad" class="recipe-image">
+				</a>
 				
             </div>
             <div class="recipe-card">
-                <img src="Images/idk.jpg" alt="idk" class="recipe-image">
+                <a href="AudioBitesRecipe9.html">
+                <img src="Images/protein-burrito.jpeg" alt="Protein Burrito" class="recipe-image">
+				</a>
             </div>
         </div>
 
@@ -241,18 +251,24 @@
         <div class="recipe-grid">
             
             <div class="recipe-card">
+                <a href="AudioBitesRecipe9.html">
+                <img src="Images/protein-burrito.jpeg" alt="Protein Burrito" class="recipe-image">
+				</a>
+            </div>
+            <div class="recipe-card">
+                <a href="AudioBitesRecipe12.html">
+                <img src="Images/jalapeno-wonton-poppers.jpg" alt="Jalapeño Wonton Poppers" class="recipe-image">
+				</a>
+            </div>
+            <div class="recipe-card">
                 <a href="AudioBitesRecipe1.html">
                 <img src="Images/ChickenCeaser.jpg" alt="Chicken Ceaser" class="recipe-image">
 				</a>
             </div>
             <div class="recipe-card">
-                <img src="Images/idk.jpg" alt="idk" class="recipe-image">
-            </div>
-            <div class="recipe-card">
-                <img src="Images/VegBur.jpeg" alt="Veggie Burrito" class="recipe-image">
-            </div>
-            <div class="recipe-card">
-                <img src="Images/Tofa.jpg" alt="Tofu Salad" class="recipe-image">
+                <a href="AudioBitesRecipe10.html">
+                <img src="Images/egg-chicken-salad.jpg" alt="Egg Chicken Salad" class="recipe-image">
+				</a>
             </div>
         </div>
     </main>
