--- a/AudioBitesCatSpe.html
+++ b/AudioBitesCatSpe.html
@@ -207,29 +207,39 @@
 
     <main class="container">
         <div class="page-header">
-            <h1 class="page-title">Breakfast Recipes</h1>
+            <h1 class="page-title">Special Recipes</h1>
         </div>
 
         <div class="recipe-grid">
             <div class="recipe-card">
-				<a href="AudioBitesRecipe2.html">
-                <img src="Images/AvoToast.jpg" alt="Avocado Toast" class="recipe-image">
+				<a href="AudioBitesRecipe40.html">
+                <img src="Images/watermelon-feta-salad.jpg" alt="Watermelon Feta Salad" class="recipe-image" />
 				</a>
             </div>
             <div class="recipe-card">
-                <img src="Images/tacocakes.jpg" alt="Taco Pancakes" class="recipe-image">
+                <a href="AudioBitesRecipe39.html">
+                <img src="Images/champagne-risotto.jpg" alt="Champagne Risotto" class="recipe-image" />
+				</a>
             </div>
             <div class="recipe-card">
-                <img src="Images/pancakes.jpg" alt="Pancakes" class="recipe-image">
+                <a href="AudioBitesRecipe41.html">
+                <img src="Images/lavender-lemonade.jpg" alt="Lavender Lemonade" class="recipe-image" />
+				</a>
             </div>
             <div class="recipe-card">
-                <img src="Images/breky.jpg" alt="Classic Breakfast" class="recipe-image">
+                <a href="AudioBitesRecipe38.html">
+                <img src="Images/salted-caramel-pretzel-brownies.jpg" alt="Salted Caramel Pretzel Brownies" class="recipe-image" />
+				</a>
             </div>
             <div class="recipe-card">
-                <img src="Images/egg.jpeg" alt="Eggs and Hash" class="recipe-image">
+                <a href="AudioBitesRecipe37.html">
+                <img src="Images/black-truffle-mac-n-cheese.jpg" alt="Black Truffle Mac 'n' Cheese" class="recipe-image" />
+				</a>
             </div>
             <div class="recipe-card">
-                <img src="Images/BlueBerry.jpg" alt="Blue Berry Muffins" class="recipe-image">
+                <a href="AudioBitesRecipe36.html">
+                <img src="Images/spicy-mango-shrimp-tacos.jpg" alt="Spicy Mango Shrimp Tacos" class="recipe-image" />
+				</a>
             </div>
         </div>
 
@@ -238,20 +248,26 @@
         <div class="recipe-grid">
             <!-- Trending Recipe Cards -->
 			<div class="recipe-card">
-            <a href="AudioBitesRecipe2.html">
-                <img src="Images/AvoToast.jpg" alt="Avocado Toast" class="recipe-image">
+            <a href="AudioBitesRecipe40.html">
+                <img src="Images/watermelon-feta-salad.jpg" alt="Watermelon Feta Salad" class="recipe-image" />
 				</a>
 				</div>
             <div class="recipe-card">
-                <img src="Images/breky.jpg" alt="Classic Breakfast" class="recipe-image">
+                <a href="AudioBitesRecipe38.html">
+                 <img src="Images/salted-caramel-pretzel-brownies.jpg" alt="Salted Caramel Pretzel Brownies" class="recipe-image" />
+				</a>
             </div>
             <div class="recipe-card">
                 <div class="recipe-card">
-                <img src="Images/pancakes.jpg" alt="Pancakes" class="recipe-image">
+                <a href="AudioBitesRecipe37.html">
+                <img src="Images/black-truffle-mac-n-cheese.jpg" alt="Black Truffle Mac 'n' Cheese" class="recipe-image" />
+				</a>
             </div>
             </div>
             <div class="recipe-card">
-                <img src="Images/BlueBerry.jpg" alt="Blue Berry Muffins" class="recipe-image">
+                <a href="AudioBitesRecipe36.html">
+                <img src="Images/spicy-mango-shrimp-tacos.jpg" alt="Spicy Mango Shrimp Tacos" class="recipe-image" />
+				</a>
             </div>
         </div>
     </main>
