--- a/AudioBitesCatMem.html
+++ b/AudioBitesCatMem.html
@@ -207,29 +207,39 @@
 
     <main class="container">
         <div class="page-header">
-            <h1 class="page-title">Breakfast Recipes</h1>
+            <h1 class="page-title">Members Recipes</h1>
         </div>
 
         <div class="recipe-grid">
             <div class="recipe-card">
-				<a href="AudioBitesRecipe2.html">
-                <img src="Images/AvoToast.jpg" alt="Avocado Toast" class="recipe-image">
+				<a href="AudioBitesRecipe35.html">
+                <img src="Images/creamy-tomato-basil-soup.jpg" alt="Bowl of Creamy Tomato Basil Soup" class="recipe-image" />
 				</a>
             </div>
             <div class="recipe-card">
-                <img src="Images/tacocakes.jpg" alt="Taco Pancakes" class="recipe-image">
+                <a href="AudioBitesRecipe34.html">
+                <img src="Images/veggie-stir-fry-with-tofu.jpg" alt="Veggie Stir-Fry with Tofu" class="recipe-image" />
+				</a>
             </div>
             <div class="recipe-card">
-                <img src="Images/pancakes.jpg" alt="Pancakes" class="recipe-image">
+                <a href="AudioBitesRecipe33.html">
+                <img src="Images/avocado-toast-poached-eggs.jpg" alt="Avocado Toast with Poached Eggs" class="recipe-image" />
+				</a>
             </div>
             <div class="recipe-card">
-                <img src="Images/breky.jpg" alt="Classic Breakfast" class="recipe-image">
+                <a href="AudioBitesRecipe32.html">
+                <img src="Images/spaghetti-aglio-e-olio.jpeg" alt="Plate of Spaghetti Aglio e Olio" class="recipe-image" />
+				</a>
             </div>
             <div class="recipe-card">
-                <img src="Images/egg.jpeg" alt="Eggs and Hash" class="recipe-image">
+                <a href="AudioBitesRecipe31.html">
+                <img src="Images/spicy-mango-salsa.jpg" alt="Fresh mango salsa" class="recipe-image" />
+				</a>
             </div>
             <div class="recipe-card">
-                <img src="Images/BlueBerry.jpg" alt="Blue Berry Muffins" class="recipe-image">
+                <a href="AudioBitesRecipe30.html">
+                <img src="Images/honey-lavender-lemonade.jpg" alt="Glass of honey-lavender lemonade" class="recipe-image" />
+				</a>
             </div>
         </div>
 
@@ -238,20 +248,26 @@
         <div class="recipe-grid">
             <!-- Trending Recipe Cards -->
 			<div class="recipe-card">
-            <a href="AudioBitesRecipe2.html">
-                <img src="Images/AvoToast.jpg" alt="Avocado Toast" class="recipe-image">
+            <a href="AudioBitesRecipe34.html">
+                <img src="Images/veggie-stir-fry-with-tofu.jpg" alt="Veggie Stir-Fry with Tofu" class="recipe-image" />
 				</a>
 				</div>
             <div class="recipe-card">
-                <img src="Images/breky.jpg" alt="Classic Breakfast" class="recipe-image">
+                <a href="AudioBitesRecipe35.html">
+                <img src="Images/creamy-tomato-basil-soup.jpg" alt="Bowl of Creamy Tomato Basil Soup" class="recipe-image" />
+				</a>
             </div>
             <div class="recipe-card">
                 <div class="recipe-card">
-                <img src="Images/pancakes.jpg" alt="Pancakes" class="recipe-image">
+                <a href="AudioBitesRecipe31.html">
+                <img src="Images/spicy-mango-salsa.jpg" alt="Fresh mango salsa" class="recipe-image" />
+				</a>
             </div>
             </div>
             <div class="recipe-card">
-                <img src="Images/BlueBerry.jpg" alt="Blue Berry Muffins" class="recipe-image">
+                <a href="AudioBitesRecipe30.html">
+                <img src="Images/honey-lavender-lemonade.jpg" alt="Glass of honey-lavender lemonade" class="recipe-image" />
+				</a>
             </div>
         </div>
     </main>
